# call-centre-agent

./: .coverage  .dockerignore  .env.example  .gitignore  .markdownlint.json  .ruff.toml  BACKLOG.md  CHANGELOG.md  CLIENT_EMAIL_FIX.md  CLIENT_SETUP_GUIDE.md  CONTRIBUTING.md  DOCKER-DEV_SETUP_GUIDE.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.dev  Dockerfile.secure  EXECUTIVE_SUMMARY_BRANCHING.md  FINAL_SOLUTION_SUMMARY.md  IMPLEMENTATION_PACKAGE.md  NETWORK_WHITELIST.md  QUICK_CLEANUP_GUIDE.md  README.md  ROADMAP.md  SECURITY_ASSESSMENT.md  SETUP_GUIDE.md  WEEK1_IMPLEMENTATION_COMPLETE.md  WORKFLOW_TEST.md  cleanup_backup_manifest.json  code-quality-toolchain.html  comprehensive_test_data.json  coverage.xml  demo_epic_1_16_1_20_complete.py  demo_epic_1_6_complete.py  docker-compose-postgres-alternatives.yml  docker-compose.secure.yml  docker-compose.yml  docker-quick-guide.md  enhanced_classifier.py  enhanced_demo_complete.py  enhanced_streamlit_demo.py  (+32 more)
.github/: README.md  copilot-instructions.md
.github/chatmodes/: agent-orchestrator.md  development-expert.md  quality-assurance-expert.md
.github/workflows/: branch-ci.yml  quick-checks.yml
agentic-framework/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent-roster.json  master-agent.md
agentic-framework/scripts/: cli.py  langchain_integration_plan.md
agentic-framework/standards/: ai-tool-integration.md  architectural-principles.md  autonomous-cognitive-triggers.md  cloud_resource_tagging_policy.md  coding_styleguide.md  documentation_styleguide.md  experiment_documentation_template.md  git_workflow_standards.md  hitl_protocols.md  iac_standards.md  network_security_policy.md  security_policies.md  tagging_policy.md  testing_strategy.md  user_story_template.md  ux_research_process.md  ​api_design_patterns.md
agentic-framework/sub-agents/: ML-engineer-agent.md  QA-engineer-agent.md  UX-research-agent.md  beast-mode-executor-agent.md  blueprint-executor-agent.md  business-analyst-agent.md  cloud-engineer-agent.md  critical-analyst-agent.md  data-engineer-agent.md  data-scientist-agent.md  database-engineer-agent.md  devops-engineer-agent.md  expert-dotnet-software-engineer-agent.md  expert-react-frontend-engineer-agent.md  networks-engineer-agent.md  principal-engineer-agent.md  product-owner-agent.md  project-manager-agent.md  quantum-thinking-framework-agent.md  research-specialist-agent.md  scm-workflow-agent.md  scrum-master-agent.md  security-expert-agent.md  site-reliability-engineer-agent.md  software-developer-agent.md  solutions-architect-agent.md  task-planner-agent.md  technical-writer-agent.md  test-automation-expert-agent.md  test-manager-agent.md  ui-designer-agent.md
agentic-framework/templates/: __init__.py  framework-management-guide.md  project-brief-template.md  quality-gates.md  workflow-state-management.md
chroma_db/: chroma.sqlite3
config/: README.md  business_rules.json  provider_config.json  user_config.example.json
data/test/: domains.txt  rag_system_test_data.json  routing_decisions.jsonl  rules_engine_test_cases.csv  rules_engine_test_data.json
docs/: AGENTIC_FRAMEWORK.md  AGENTIC_FRAMEWORK_GUIDE.md  CODE_QUALITY_SUMMARY.md  COMPREHENSIVE_BUILD_TUTORIAL.md  CONFIGURATION_MIGRATION_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_SECURITY_ANALYSIS.md  ENHANCED_DEMO_SUMMARY.md  FRAMEWORK_REORGANIZATION.md  PRODUCTION_DEPLOYMENT_NOTES.md  PROJECT_STRUCTURE.md  PYTHON_REORGANIZATION.md
docs/archive/: BRANCHING_STRATEGY_PROPOSAL.md  FRAMEWORK_EXTRACTION_PLAN.md  INTEGRATION_PLAN.md  STRATEGIC_ANALYSIS.md  UI_IMPROVEMENTS.md
docs/cleanup/: CLEANUP_ANALYSIS.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_EXECUTIVE_SUMMARY.md  CONFIG_MIGRATION_COMPLETE.md
docs/tutorial/: PHASE_0_AGENTIC_FRAMEWORK.md  PHASE_1_FOUNDATION.md  PHASE_2_TRADITIONAL_ML.md  PHASE_3_GEMINI_INTEGRATION.md  PHASE_4_STREAMLIT_UI.md  PHASE_5_TESTING_VALIDATION.md  PHASE_6_PRODUCTION_DEPLOYMENT.md  README.md  SQL_TO_PYTHON_QUICK_REFERENCE.md
framework/: README.md
framework/standards/: agile_ceremonies_guide.md  ai-tool-integration.md  api_reference_template.md  database_schema_standards.md  sre_handbook.md  user_story_template.md
framework/sub-agents/: QA-engineer-agent.md  azure-principal-architect-agent.md  expert-dotnet-software-engineer-agent.md  project-manager-agent.md  research-specialist-agent.md  technical-writer-agent.md
images/: telkom-1500-800.avif
legacy/: launch_demo_original.py  launch_traditional_fallback.py  streamlit_demo_original.py
legacy/launchers/: launch_demo_intelligent.py  launch_enhanced_demo.py  launch_safe_demo.bat
notebooks/: model_architecture_design.ipynb
scripts/: CLEANUP_README.md  __init__.py  cleanup_root_directory.py  fix_api_key.py  fix_gemini_model.py  rename_framework_refs.py  train_model.py  update_agent_paths.py  validate_demo.py
scripts/demos/: demo_epic_1_11_rag_complete.py  enhanced_vector_schema_demo.py  stepwise_demo.py
scripts/migrations/: vector_routing_intelligence_migration.py
scripts/setup/: setup_env.py
src/: embedding_pipeline.py
telco-call-centre/: README.md  agent-roster.json  ai-tool-integration.md  master-agent.md  project-brief.md  project-context.json  project-context.md
telco-domain/: BRANCHING_IMPLEMENTATION_GUIDE.md  README.md  RETROSPECTIVE_BRANCHING_OVERSIGHT.md  project-brief.md  project-context.json
telkom-call-centre/: README.md  project-brief.md
tests/: test_business_rules_config.py  test_departmental_routing.py  test_enhanced_classifier.py  test_html_cleaning.py  test_rules_engine_config_integration.py  test_ticket_classifier.py  test_vector_client_new.py  test_vector_db_integration.py
tools/: generate_diagrams.py
(+77 files in other folders)
